# STFGNN-CUDA-CPP-reconst

./: CMakeLists.txt  README.md
include/: dataloader.h  fusion_module.h  gated_conv.h  graph_construction.h  level0_model.h  level1_layers.h  preprocessing.h
scr/: dataloader.cpp  fusion_module.cu  gated_conv.cu  graph_construction.cu  level0_model.cpp  level1_layers.cu  main.cpp  preprocessing.cu  stfgnn_layer.cu
